# deltakit

./: .gitignore  Cargo.toml  README.md
crates/cli-core/: Cargo.toml
crates/cli-core/src/: lib.rs
crates/deltakit-cli/: Cargo.toml
crates/deltakit-cli/src/: main.rs
crates/deltakit-core/: Cargo.toml
crates/deltakit-core/src/: lib.rs
crates/deltakit-core/tests/: core_mvp.rs
crates/deltakit-py/: Cargo.toml
crates/deltakit-py/src/: lib.rs
crates/shard-planner/: Cargo.toml
crates/shard-planner/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
