[package]
name = "deltakit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
blake3 = { workspace = true }
bytesize = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
storage = { path = "../storage" }
deltalake = { workspace = true }
futures = { workspace = true }

[features]
default = []
s3 = ["storage/s3", "deltalake/s3"]
gcs = ["storage/gcs", "deltalake/gcs"]
azure = ["storage/azure", "deltalake/azure"]
zstd = []
sql = []

[dev-dependencies]
tempfile = "3.10"


