[package]
name = "deltakit-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "deltakit_py"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
pyo3 = { workspace = true }
shard-planner = { path = "../shard-planner" }
deltakit-core = { path = "../deltakit-core" }
tokio = { workspace = true }


