[package]
name = "shard-planner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
itertools = "0.12"
deltakit-core = { path = "../deltakit-core" }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

