[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[features]
default = []
s3 = ["object_store/aws"]
gcs = ["object_store/gcp"]
azure = ["object_store/azure"]


